# nlp-assignments

./: .gitignore  Assignment1-2526.ipynb  LICENSE  README.md  assignment1.ipynb  assignment2.ipynb  pyproject.toml  requirements-dev.txt  run.sbatch  stripout.sh
.github/workflows/: static-analysis.yaml
assets/: Assignment2-2526.slides.html
